--- a/views/templates/default.jade
+++ b/views/templates/default.jade
@@ -7,4 +7,5 @@ html
         script(src="https://code.jquery.com/jquery-3.3.1.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
     body
+        include nav
         block content
