--- a/views/templates/nav.jade
+++ b/views/templates/nav.jade
@@ -1,4 +1,4 @@
-nav(class="navbar navbar-default")
+nav(class="navbar navbar-danger")
     div(class="container-fluid")
         div(class="navbar-header")
             button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
@@ -6,7 +6,7 @@ nav(class="navbar navbar-default")
                 span(class="icon-bar")
                 span(class="icon-bar")
                 span(class="icon-bar")
-            a(class="navbar-brand" href="")= 'Purocodigo'
+            a(class="navbar-brand" href="")= 'LearNet'
 
         div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
             ul(class="nav navbar-nav navbar-right")
