--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -3,4 +3,18 @@ extends ../templates/default
 
 //de aqui en adelante se pone nuestro contenido de la pagina
 block content
-    h3= 'Registrarme'
+    div(class='row')
+        div(class='col-md-6 col-md-offset-3')
+            div(class='panel panel-default')
+                div(class='panel-heading')= 'Registrarme'
+                div(class='panel-body')
+                    form(action='' method='post')
+                        div(class='form-group')
+                            label(for="email")= 'Correo'
+                            input(type='email' name='email' id='email' placeholder='Correo' class='form-control')
+                        div(class='form-group')
+                            label(for="nombre")= 'Nombre'
+                            input(type='text' name='nombre' id='nombre' placeholder='Escribe tu nombre' class='form-control')
+                        div(class='form-group')
+                            label(for="nombre")= 'Nombre'
+                            input(type='text' name='nombre' id='nombre' placeholder='Escribe tu nombre' class='form-control')
