--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -1,5 +1,6 @@
 //estender de una plantillas
 extends ../templates/default
+//haciendo pruebas con git pull
 
 //de aqui en adelante se pone nuestro contenido de la pagina
 block content
