--- a/views/templates/nav.jade
+++ b/views/templates/nav.jade
@@ -1,3 +1,6 @@
+
+//extends ../users/signup
+
 nav(class="navbar navbar-light" style="background-color: #e3f2fd;")
     div(class="container-fluid")
         div(class="navbar-header")
@@ -11,7 +14,7 @@ nav(class="navbar navbar-light" style="background-color: #e3f2fd;")
         div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
             ul(class="nav navbar-nav navbar-right")
                 li
-                    a(href="")= 'Registrarse'
+                    a(href="../users/signup")= 'Registrarse'
                 li
                     a(href="")= 'Iniciar Sesion'
                 li(class="dropdown")
