--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -9,13 +9,26 @@ block content
             div(class='panel panel-default')
                 div(class='panel-heading')= 'Registrarme'
                 div(class='panel-body')
-                    form(action='' method='post')
-                        div(class='form-group')
+                    form(action='http://localhost:3000/auth/signup' method='post' autocomplete='off')
+                        div(class='form-group has-success')
                             label(for="email")= 'Correo'
                             input(type='email' name='email' id='email' placeholder='Correo' class='form-control')
-                        div(class='form-group')
+                        div(class='form-group has-success')
                             label(for="nombre")= 'Nombre'
                             input(type='text' name='nombre' id='nombre' placeholder='Escribe tu nombre' class='form-control')
-                        div(class='form-group')
-                            label(for="nombre")= 'Nombre'
-                            input(type='text' name='nombre' id='nombre' placeholder='Escribe tu nombre' class='form-control')
+                        div(class='form-group has-success')
+                            label(for="apellido")= 'Apellido'
+                            input(type='text' name='apellido' id='apellido' placeholder='Escribe tu Apellido' class='form-control')
+                        div(class='form-group has-success')
+                            label(for="password")= 'Contraseña'
+                            input(type='password' name='password' id='password' placeholder='Escribe tu Contraseña' class='form-control')
+                        div(class='form-group has-success')
+                            label(for="cuidad")= 'Ciudad'
+                            input(type='text' name='cuidad' id='cuidad' placeholder='Escribe tu Ciudad' class='form-control')
+                        div(class='form-group has-success')
+                            label(for="pais")= 'Pais'
+                            input(type='text' name='pais' id='pais' placeholder='Escribe tu pais' class='form-control')
+                        div(class='form-group has-success')
+                            label(for="interes")= 'Temas de interes'
+                            input(type='text' name='interes' id='interes' placeholder='Escribe tu temas de interes' class='form-control')
+                        button( type='submit' class='btn btn-primary')= 'Registrarse'
