--- a/views/templates/nav.jade
+++ b/views/templates/nav.jade
@@ -1,7 +1,7 @@
 
 //extends ../users/signup
 
-nav(class="navbar navbar-light" style="background-color: #e3f2fd;")
+nav(class="navbar navbar-light")
     div(class="container-fluid")
         div(class="navbar-header")
             button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
